--- a/experiments.conf
+++ b/experiments.conf
@@ -2747,7 +2747,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr1e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl128_blr1e-05_tlr0.0002 = ${best} {
@@ -2763,7 +2763,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr1e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl128_blr1e-05_tlr0.0003 = ${best} {
@@ -2779,7 +2779,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr1e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0001 = ${best} {
@@ -2795,7 +2795,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0002 = ${best} {
@@ -2811,7 +2811,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0003 = ${best} {
@@ -2827,7 +2827,7 @@ small_batch_no_nsp_pair_1.2m_sl128_blr2e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0001 = ${best} {
@@ -2843,7 +2843,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0002 = ${best} {
@@ -2859,7 +2859,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0003 = ${best} {
@@ -2875,7 +2875,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr1e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0001 = ${best} {
@@ -2891,7 +2891,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0002 = ${best} {
@@ -2907,7 +2907,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0003 = ${best} {
@@ -2923,7 +2923,7 @@ small_batch_no_nsp_pair_1.2m_sl256_blr2e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0001 = ${best} {
@@ -2939,7 +2939,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0002 = ${best} {
@@ -2955,7 +2955,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0003 = ${best} {
@@ -2971,7 +2971,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr1e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0001 = ${best} {
@@ -2987,7 +2987,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0002 = ${best} {
@@ -3003,7 +3003,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0003 = ${best} {
@@ -3019,7 +3019,7 @@ small_batch_no_nsp_pair_1.2m_sl384_blr2e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0001 = ${best} {
@@ -3035,7 +3035,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0002 = ${best} {
@@ -3051,7 +3051,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0003 = ${best} {
@@ -3067,7 +3067,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr1e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0001 = ${best} {
@@ -3083,7 +3083,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0001 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0002 = ${best} {
@@ -3099,7 +3099,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0002 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0003 = ${best} {
@@ -3115,7 +3115,7 @@ small_batch_no_nsp_pair_1.2m_sl512_blr2e-05_tlr0.0003 = ${best} {
   bert_config_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/vocab.txt
   tf_checkpoint = /checkpoint/danqi/coref_eval/bert_models/cased_L-24_H-1024_A-16/bert_model.ckpt
-  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt.pt
+  init_checkpoint = /checkpoint/omerlevy/mandar_data/pretraining_models/no_nsp_pair/checkpoint_37_1200000.pt
 }
 
 small_batch_no_nsp_random_sl128_blr1e-05_tlr0.0001 = ${best} {
