--- a/experiments.conf
+++ b/experiments.conf
@@ -44,7 +44,7 @@ best {
   task_optimizer = adam
 }
 
-english_sl128_ff3000_blr1e-05_tlr0.0002 = ${best}{
+bert_base = ${best}{
   num_docs = 2802
   bert_learning_rate = 1e-05
   task_learning_rate = 0.0002
@@ -54,13 +54,13 @@ english_sl128_ff3000_blr1e-05_tlr0.0002 = ${best}{
   eval_path = ${data_dir}/dev.english.128.jsonlines
   conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
   max_training_sentences = 11
-  bert_config_file = ${best.log_root}/english_sl128_ff3000_blr1e-05_tlr0.0002/bert_config.json
-  vocab_file = ${best.log_root}/english_sl128_ff3000_blr1e-05_tlr0.0002/vocab.txt
-  tf_checkpoint = ${best.log_root}/english_sl128_ff3000_blr1e-05_tlr0.0002/model.max.ckpt
-  init_checkpoint = ${best.log_root}/english_sl128_ff3000_blr1e-05_tlr0.0002/model.max.ckpt
+  bert_config_file = ${best.log_root}/bert_base/bert_config.json
+  vocab_file = ${best.log_root}/bert_base/vocab.txt
+  tf_checkpoint = ${best.log_root}/bert_base/model.max.ckpt
+  init_checkpoint = ${best.log_root}/bert_base/model.max.ckpt
 }
 
-large_english_sl384_ff3000_blr1e-05_tlr0.0002 = ${best}{
+bert_large = ${best}{
   num_docs = 2802
   bert_learning_rate = 1e-05
   task_learning_rate = 0.0002
@@ -70,13 +70,13 @@ large_english_sl384_ff3000_blr1e-05_tlr0.0002 = ${best}{
   eval_path = ${data_dir}/dev.english.384.jsonlines
   conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
   max_training_sentences = 3
-  bert_config_file = ${best.log_root}/large_english_sl384_ff3000_blr1e-05_tlr0.0002/bert_config.json
-  vocab_file = ${best.log_root}/large_english_sl384_ff3000_blr1e-05_tlr0.0002/vocab.txt
-  tf_checkpoint = ${best.log_root}/large_english_sl384_ff3000_blr1e-05_tlr0.0002/model.max.ckpt
-  init_checkpoint = ${best.log_root}/large_english_sl384_ff3000_blr1e-05_tlr0.0002/model.max.ckpt
+  bert_config_file = ${best.log_root}/bert_large/bert_config.json
+  vocab_file = ${best.log_root}/bert_large/vocab.txt
+  tf_checkpoint = ${best.log_root}/bert_large/model.max.ckpt
+  init_checkpoint = ${best.log_root}/bert_large/model.max.ckpt
 }
 
-base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001 = ${best}{
+spanbert_base = ${best}{
   num_docs = 2802
   bert_learning_rate = 2e-05
   task_learning_rate = 0.0001
@@ -86,13 +86,13 @@ base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001 = ${best}{
   eval_path = ${data_dir}/dev.english.384.jsonlines
   conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
   max_training_sentences = 3
-  bert_config_file = ${best.log_root}/base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001/bert_config.json
-  vocab_file = ${best.log_root}/base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001/vocab.txt
-  tf_checkpoint = ${best.log_root}/base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001/model.max.ckpt
-  init_checkpoint = ${best.log_root}/base_big_batch_no_nsp_pair_sl384_blr2e-05_tlr0.0001/model.max.ckpt
+  bert_config_file = ${best.log_root}/spanbert_base/bert_config.json
+  vocab_file = ${best.log_root}/spanbert_base/vocab.txt
+  tf_checkpoint = ${best.log_root}/spanbert_base/model.max.ckpt
+  init_checkpoint = ${best.log_root}/spanbert_base/model.max.ckpt
 }
 
-small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003 = ${best}{
+spanbert_large = ${best}{
   num_docs = 2802
   bert_learning_rate = 1e-05
   task_learning_rate = 0.0003
@@ -102,8 +102,8 @@ small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003 = ${best}{
   eval_path = ${data_dir}/dev.english.512.jsonlines
   conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
   max_training_sentences = 3
-  bert_config_file = ${best.log_root}/small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003/bert_config.json
-  vocab_file = ${best.log_root}/small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003/vocab.txt
-  tf_checkpoint = ${best.log_root}/small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003/model.max.ckpt
-  init_checkpoint = ${best.log_root}/small_batch_no_nsp_pair_sl512_blr1e-05_tlr0.0003/model.max.ckpt
+  bert_config_file = ${best.log_root}/spanbert_large/bert_config.json
+  vocab_file = ${best.log_root}/spanbert_large/vocab.txt
+  tf_checkpoint = ${best.log_root}/spanbert_large/model.max.ckpt
+  init_checkpoint = ${best.log_root}/spanbert_large/model.max.ckpt
 }
