add bert train configs

--- a/experiments.conf
+++ b/experiments.conf
@@ -60,6 +60,22 @@ bert_base = ${best}{
   init_checkpoint = ${best.log_root}/bert_base/model.max.ckpt
 }
 
+train_bert_base = ${best}{
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 128
+  ffnn_size = 1000
+  train_path = ${data_dir}/train.english.128.jsonlines
+  eval_path = ${data_dir}/dev.english.128.jsonlines
+  conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
+  max_training_sentences = 11
+  bert_config_file = ${best.log_root}/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ${best.log_root}/cased_L-12_H-768_A-12/vocab.txt
+  tf_checkpoint = ${best.log_root}/cased_L-12_H-768_A-12/bert_model.ckpt
+  init_checkpoint = ${best.log_root}/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+
 bert_large = ${best}{
   num_docs = 2802
   bert_learning_rate = 1e-05
@@ -74,6 +90,22 @@ bert_large = ${best}{
   vocab_file = ${best.log_root}/bert_large/vocab.txt
   tf_checkpoint = ${best.log_root}/bert_large/model.max.ckpt
   init_checkpoint = ${best.log_root}/bert_large/model.max.ckpt
+}
+
+train_bert_large = ${best}{
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 384
+  ffnn_size = 3000
+  train_path = ${data_dir}/train.english.384.jsonlines
+  eval_path = ${data_dir}/dev.english.384.jsonlines
+  conll_eval_path = ${data_dir}/dev.english.v4_gold_conll
+  max_training_sentences = 3
+  bert_config_file = ${best.log_root}/cased_L-24_H-1024_A-16/bert_config.json
+  vocab_file = ${best.log_root}/cased_L-24_H-1024_A-16/vocab.txt
+  tf_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.max.ckpt
+  init_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.max.ckpt
 }
 
 spanbert_base = ${best}{
