--- a/experiments.conf
+++ b/experiments.conf
@@ -104,8 +104,8 @@ train_bert_large = ${best}{
   max_training_sentences = 3
   bert_config_file = ${best.log_root}/cased_L-24_H-1024_A-16/bert_config.json
   vocab_file = ${best.log_root}/cased_L-24_H-1024_A-16/vocab.txt
-  tf_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.max.ckpt
-  init_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.max.ckpt
+  tf_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.ckpt
+  init_checkpoint = ${best.log_root}/cased_L-24_H-1024_A-16/bert_model.ckpt
 }
 
 spanbert_base = ${best}{
